# easybot

./: .env  .gitignore  config.json  main.py  pyproject.toml
SQL/: create.sql
easybot/agent/: __init__.py  context.py  hook.py  loop.py  memory.py  message.py  runner.py  skills.py  subagent.py
easybot/agent/tools/: __init__.py  cron.py  filesystem.py  mcp.py  message.py  registry.py  shell.py  spawn.py  web.py
easybot/api/: __init__.py
easybot/api/agent/: __init__.py  handler.py
easybot/api/chat/: __init__.py  handler.py
easybot/api/session/: __init__.py  handler.py
easybot/api/user/: __init__.py  handler.py
easybot/chat/: __init__.py  qq.py  ws.py  zero.py
easybot/config/: __init__.py  loader.py  paths.py  schema.py
easybot/core/: event_loop.py
easybot/providers/: __init__.py  base.py  llama_cpp.py  openai_compat_provider.py  registry.py
easybot/providers/openai_responses/: __init__.py  converters.py  parsing.py
easybot/services/: agent.py  initial.py  mayim.py
easybot/session/: __init__.py  manager.py
easybot/utils/: helpers.py  logger.py  prompt_templates.py  runtime.py  shutdown.py
services/proxy/: run.py
services/sherpa/: run.py
