[project]
name = "easybot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chainlit>=2.9.6",
    "numpy>=2.2.6",
    "python-dotenv>=1.2.2",
    "pyzmq>=27.1.0",
    "sherpa-onnx>=1.12.28",
    "sounddevice>=0.5.5",
]
